force-app/main/default/objects/Shop_Product__c/Shop_Product__c.object-meta.xml
<CustomObject>
    <description>This is shop product custom object</description>
    <label>Shop Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shop Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>