force-app/main/default/objects/Shop_Product__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This is product descripion</description>
    <inlineHelpText>Provide product description here</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>