force-app/main/default/objects/Shop_Product__c/fields/Expiary_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiary_Date__c</fullName>
    <inlineHelpText>Provide expiery date</inlineHelpText>
    <label>Expiary Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>