force-app/main/default/objects/Shop_Product__c/fields/Mnufacturing_Date__c.field-meta.xml
<CustomField>
    <fullName>Mnufacturing_Date__c</fullName>
    <inlineHelpText>Manufacturing date</inlineHelpText>
    <label>Mnufacturing Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>