force-app/main/default/objects/Shop_Product__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>price field</description>
    <inlineHelpText>It is a price field</inlineHelpText>
    <label>Price (MRP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>