force-app/main/default/objects/Shop_Product__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Enter product family</inlineHelpText>
    <label>Product Family</label>
    <referenceTo>Shop_Product_Family__c</referenceTo>
    <relationshipLabel>Shop Products</relationshipLabel>
    <relationshipName>Shop_Products</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>