force-app/main/default/objects/Shop_Product__c/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <description>This is key field for product</description>
    <displayFormat>SP-{000000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>System generated value</inlineHelpText>
    <label>Product Id</label>
    <type>AutoNumber</type>
</CustomField>