force-app/main/default/objects/Shop_Product__c/fields/Product_Image__c.field-meta.xml
<CustomField>
    <fullName>Product_Image__c</fullName>
    <description>This is the product image url</description>
    <inlineHelpText>Provide image url here</inlineHelpText>
    <label>Product Image</label>
    <required>true</required>
    <type>Url</type>
</CustomField>