force-app/main/default/objects/Shop_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Family__c</columns>
    <columns>Price__c</columns>
    <columns>Quantity__c</columns>
    <columns>Mnufacturing_Date__c</columns>
    <columns>Expiary_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>